; ModuleID = '/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_proc.c_sepgsql_proc_relabel.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/sepgsql/extr_proc.c_sepgsql_proc_relabel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32 }

@ProcedureRelationId = common dso_local global i32 0, align 4
@SEPG_CLASS_DB_PROCEDURE = common dso_local global i32 0, align 4
@SEPG_DB_PROCEDURE__SETATTR = common dso_local global i32 0, align 4
@SEPG_DB_PROCEDURE__RELABELFROM = common dso_local global i32 0, align 4
@SEPG_DB_PROCEDURE__RELABELTO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sepgsql_proc_relabel(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_4__, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @ProcedureRelationId, align 4
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 2
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* %3, align 4
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = call i8* @getObjectIdentity(%struct.TYPE_4__* %5)
  store i8* %12, i8** %6, align 8
  %13 = load i32, i32* @SEPG_CLASS_DB_PROCEDURE, align 4
  %14 = load i32, i32* @SEPG_DB_PROCEDURE__SETATTR, align 4
  %15 = load i32, i32* @SEPG_DB_PROCEDURE__RELABELFROM, align 4
  %16 = or i32 %14, %15
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @sepgsql_avc_check_perms(%struct.TYPE_4__* %5, i32 %13, i32 %16, i8* %17, i32 1)
  %19 = load i8*, i8** %4, align 8
  %20 = load i32, i32* @SEPG_CLASS_DB_PROCEDURE, align 4
  %21 = load i32, i32* @SEPG_DB_PROCEDURE__RELABELTO, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @sepgsql_avc_check_perms_label(i8* %19, i32 %20, i32 %21, i8* %22, i32 1)
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @pfree(i8* %24)
  ret void
}

declare dso_local i8* @getObjectIdentity(%struct.TYPE_4__*) #1

declare dso_local i32 @sepgsql_avc_check_perms(%struct.TYPE_4__*, i32, i32, i8*, i32) #1

declare dso_local i32 @sepgsql_avc_check_perms_label(i8*, i32, i32, i8*, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
